[gateways] Addition of keycloak gateway
