# models/constants/context.go
@@ -1,0 +1,7 @@
+package constants
+
+type ContextKey string
+
+const (
+	ContextKeyUserInfoKey ContextKey = "userInfo"
+)
