# server/routes.go
@@ -1,14 +1,15 @@
 package server
 
 import (
+	_ "go-api/.internal/docs"
 	// Generate automatically the swagger docs
+	"go-api/handlers/auth"
+	"go-api/handlers/healthcheck"
+	"go-api/server/middlewares"
 
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
 	"go.uber.org/fx"
-
-	_ "go-api/.internal/docs"
-	"go-api/handlers/healthcheck"
 )
 
 // Params defines the dependencies for the routes module.
@@ -17,6 +18,8 @@ type RegisterRoutesParams struct {
 
 	Echo        *echo.Echo
 	Healthcheck healthcheck.Handler
+	AuthHandler auth.AuthHandler
+	Middlewares middlewares.Middlewares
 }
 
 // RegisterRoutes registers the routes for the API.
@@ -24,4 +27,10 @@ func RegisterRoutes(p RegisterRoutesParams) {
 	p.Echo.GET("/", p.Healthcheck.GetAPIStatus)
 
 	p.Echo.GET("/swagger/*any", echoSwagger.WrapHandler)
+
+	// Authentication routes
+	p.Echo.POST("/auth/login", p.AuthHandler.CreateSession)
+	p.Echo.POST("/auth/refresh", p.AuthHandler.UpdateSession)
+	p.Echo.GET("/auth/user", p.AuthHandler.GetUser, p.Middlewares.AuthMiddleware())
+
 }
